--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "scripts": {
         "start": "node node_modules/react-native/local-cli/cli.js start",
-        "start_server": "node server/index.js",
+        "start_server": "node server/index.js start",
         "test": "jest"
     },
     "dependencies": {
@@ -16,6 +16,7 @@
         "connect-flash": "^0.1.1",
         "connect-redis": "^3.3.0",
         "dotenv": "^4.0.0",
+        "ejs": "^2.5.6",
         "express": "^4.15.3",
         "gtfs-realtime-bindings": "^0.0.4",
         "knex": "^0.13.0",
