--- a/package.json
+++ b/package.json
@@ -1,61 +1,16 @@
 {
-
-
-    "name": "bart_buddy_mobile",
-    "version": "0.0.1",
-    "private": true,
-    "scripts": {
-        "start": "node node_modules/react-native/local-cli/cli.js start",
-        "start_server": "node server/index.js start",
-        "test": "jest"
-    },
-    "dependencies": {
-        "axios": "^0.16.2",
-        "bcrypt-nodejs": "^0.0.3",
-        "bookshelf": "^0.10.3",
-        "bytebuffer": "^5.0.1",
-        "config": "^1.26.1",
-        "connect-flash": "^0.1.1",
-        "connect-redis": "^3.3.0",
-        "dotenv": "^4.0.0",
-        "ejs": "^2.5.6",
-        "express": "^4.15.3",
-        "gtfs-realtime-bindings": "^0.0.4",
-        "knex": "^0.13.0",
-        "long": "^3.2.0",
-        "native-base": "^2.1.5",
-        "passport": "^0.3.2",
-        "passport-facebook": "^2.1.1",
-        "passport-google-oauth": "^1.0.0",
-        "passport-local": "^1.0.0",
-        "pg": "^6.2.4",
-        "react": "16.0.0-alpha.6",
-        "react-native": "0.44.3",
-        "react-native-maps": "^0.15.2",
-        "react-native-menu": "^0.21.0",
-        "xml2json": "^0.11.0",
-        "react-native-vector-icons": "^4.2.0"
-    },
-    "devDependencies": {
-        "babel-jest": "20.0.3",
-        "babel-preset-react-native": "1.9.2",
-        "jest": "20.0.4",
-        "react-test-renderer": "16.0.0-alpha.6"
-    },
-    "jest": {
-        "preset": "react-native"
-    },
-      "name": "bart_buddy_mobile",
-      "version": "0.0.1",
-      "private": true,
-      "scripts": {
-        "start": "node node_modules/react-native/local-cli/cli.js start",
-        "start_server": "node server/index.js start",
-        "test": "jest"
+  "name": "bart_buddy_mobile",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "start_server": "node server/index.js start",
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^0.16.2",
     "bcrypt-nodejs": "^0.0.3",
+    "bluebird": "^3.5.0",
     "bookshelf": "^0.10.3",
     "bytebuffer": "^5.0.1",
     "config": "^1.26.1",
@@ -69,6 +24,7 @@
     "knex": "^0.13.0",
     "long": "^3.2.0",
     "native-base": "^2.1.5",
+    "node-fetch": "^1.7.1",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
@@ -89,5 +45,4 @@
   "jest": {
     "preset": "react-native"
   }
-
 }
