--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native": "0.44.3",
     "react-native-maps": "^0.15.2",
     "react-native-menu": "^0.21.0",
+    "util": "^0.10.3",
     "xml2json": "^0.11.0"
   },
   "devDependencies": {
