--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "long": "^3.2.0",
     "native-base": "^2.1.5",
     "node-fetch": "^1.7.1",
+    "node-schedule": "^1.2.3",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
