--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jquery": "^3.2.1",
     "knex": "^0.13.0",
     "long": "^3.2.0",
+    "moment": "^2.18.1",
     "native-base": "^2.1.5",
     "node-fetch": "^1.7.1",
     "node-schedule": "^1.2.3",
