--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
     "react-native": "0.44.3",
     "react-native-maps": "^0.15.2",
     "react-native-menu": "^0.21.0",
+    "react-native-socketio": "^0.3.0",
     "react-navigation": "^1.0.0-beta.11",
+    "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3",
     "twilio": "^3.3.0",
     "util": "^0.10.3",
     "xml2json": "^0.11.0"
